# matrix-

./: .gitignore
src/: CMakeLists.txt  Makefile  helpers.cc  helpers.cpp  main.cc  main.cpp  matrix_oop.cc  matrix_oop.cpp  matrix_oop.h  matrix_oop.hpp
src/inc/: s21_matrix_oop.h
src/lib/: constructors.cc  helpers.cc  matrix_oop.cc  operations.cc  operators.cc  other.cc
src/tests/: .constructors.cc.swp  .constructors.cc.un~  .main.cc.un~  constructors.cc  constructors_test.cc  test.cc  test_help.h  test_helpers.cc
